--- a/template/index.html
+++ b/template/index.html
@@ -254,92 +254,13 @@
             <div class="upper-footer">
                 <div class="top-footer">
                     <div class="content-bottom">
-
+                    <a href="#">Вверх</a>
 
                     </div>
                 </div>
-                <div class="span12 row inner-footer">
-                    <div class="span3 footer-list big" style="height: 247px;">
-                        <dl>
-                            <dt>
-                                <a href="/about/index.html">О компании</a>
-                            </dt>
-                            <dt>
-                                <a href="http://rabota.cdek.ru">Вакансии</a>
-                            </dt>
-                            <dt>
-                                <a href="/clients/index.html">Клиенту</a>
-                            </dt>
-                            <dt>
-                                <a href="/franch.html">Франчайзинг</a>
-                            </dt>
-                            <dt>
-                                <a href="/bonus/index.html">Бонусы</a>
-                            </dt>
-                            <dt>
-                                <a href="/reglament.html">Заключить договор</a>
-                            </dt>
-                            <dt>
-                                <a href="/oferta_cdek.html">Оферта СДЭК</a>
-                            </dt>
-                        </dl>
-                    </div>
-                    <div class="span3 footer-list big" style="height: 247px;">
-                        <dl>
-                            <dt>
-                                <a href="/services/srochnaya_dostavka/index.html">Срочная доставка</a>
-                            </dt>
-                            <dt>
-                                <a href="/services/internet-magazinam/index.html">Доставка для интернет-магазинов</a>
-                            </dt>
-                            <dt>
-                                <a href="/services/aviaperevozki_gruzov/index.html">Авиаперевозки грузов</a>
-                            </dt>
-                            <dt>
-                                <a href="/events.html">Акции</a>
-                            </dt>
-                            <dt>
-                                <a href="https://www.cdek.ru/services/index.html">Все услуги</a>
-                            </dt>
-                            <dt>
-                                <a href="https://www.cdek.ru/privacy_policy.html">Политика конфиденциальности</a>
-                            </dt>
-                        </dl>
-                    </div>
-                    <div class="span3 footer-list small" style="height: 247px;">
-                        <dl>
-                            <dt>
-                                <a href="/calculator.html">Расчет стоимости</a>
-                            </dt>
-                            <dt>
-                                <a href="/clients/index.html">Вызвать курьера</a>
-                            </dt>
-                            <dt>
-                                <a href="/online-payment-platron.html">Оплатить услуги</a>
-                            </dt>
-                            <dt>
-                                <a href="/clients/reglament.html">Заключить договор</a>
-                            </dt>
-                            <dt>
-                                <a href="https://passport.cdek.ru/details.html">Предоставить паспортные данные и ИНН</a>
-                            </dt>
-                            <dt>
-                                <a href="/contacts.html">Адреса офисов</a>
-                            </dt>
-                            <dt>
-                                <a href="https://lknew.cdek.ru" target="_blank">Вход с паролем</a>
-                            </dt>
-                            <dt>
-                                <a href="#" onclick="$('#call-handler').trigger('click');eval(GetTranslation('OnClickFooterCall-html'));">Заказать звонок</a>
-                            </dt>
-                        </dl>
-                    </div>
-                    <div class="span3 footer-list footer-small" style="height: 247px;">
-                        <dl>
-                            <dt>
-                                <a href="/contacts.html">Адреса офисов</a>
-                            </dt>
-                        </dl>
+            </div>
+        </footer>
+
 		</div>
 
 		<!-- Scripts -->
